Auto-pause timer when the module viewer tab is hidden (switching to different tab, minimizing window, etc.). Make title bar fixed, so it's always visible when scrolling the page.

--- a/src/app/module-viewer/riverside-step-template/template-heading/template-heading.component.sass
+++ b/src/app/module-viewer/riverside-step-template/template-heading/template-heading.component.sass
@@ -2,10 +2,10 @@
     padding-top: 2vw
 
 .template-title-bar
-    position: absolute
+    position: fixed
     top: 0
-    left: 0
-    width: 100%
+    left: 360px
+    width: calc(100% - 360px)
     text-align: center
     background-color: #eee
     color: black
